# wonky-todo

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.claude/agent-memory/code-reviewer/: MEMORY.md  project_wonky_todo.md
templates/: index.html  items.html
tests/: test_main.py
